--- a/research/rhrms_exp_test.ipynb
+++ b/research/rhrms_exp_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
        "[5 rows x 35 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,8 +242,280 @@
     "# set input matrix and target column:\n",
     "y = df['Declared']\n",
     "# show first rows of data:\n",
-    "x.head()"
+    "x.head()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['FIPS', 'MaxPrecipitation', 'WindSwathRadii', 'CountyOverlap',\n",
+       "       'VALUE_1', 'VALUE_2', 'VALUE_3', 'VALUE_4', 'VALUE_5', 'VALUE_7',\n",
+       "       'Stormsurge_Area', 'SOCIAL', 'INFRASTRUCTURE', 'COMCAPITAL',\n",
+       "       'INSTITUTION', 'ENVIRONMENT', 'BRIC_SCORE', 'Unclassified',\n",
+       "       'Open_Water', 'Perennial_Snow_Ice', 'Developed__Open_Space',\n",
+       "       'Developed__Low_Intensity', 'Developed__Medium_Intensity',\n",
+       "       'Developed__High_Intensity', 'Barren_Land', 'Deciduous_Forest',\n",
+       "       'Evergreen_Forest', 'Mixed_Forest', 'Shrub_Scrub', 'Herbaceuous',\n",
+       "       'Hay_Pasture', 'Cultivated_Crops', 'Woody_Wetlands',\n",
+       "       'Emergent_Herbaceuous_Wetlands', 'Population'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2181, 35)"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "FIPS                             2181\n",
+       "MaxPrecipitation                 2181\n",
+       "WindSwathRadii                   2181\n",
+       "CountyOverlap                    2181\n",
+       "VALUE_1                           434\n",
+       "VALUE_2                           434\n",
+       "VALUE_3                           434\n",
+       "VALUE_4                           434\n",
+       "VALUE_5                           434\n",
+       "VALUE_7                           183\n",
+       "Stormsurge_Area                   434\n",
+       "SOCIAL                           2181\n",
+       "INFRASTRUCTURE                   2181\n",
+       "COMCAPITAL                       2181\n",
+       "INSTITUTION                      2181\n",
+       "ENVIRONMENT                      2181\n",
+       "BRIC_SCORE                       2181\n",
+       "Unclassified                     2181\n",
+       "Open_Water                       2181\n",
+       "Perennial_Snow_Ice               2181\n",
+       "Developed__Open_Space            2181\n",
+       "Developed__Low_Intensity         2181\n",
+       "Developed__Medium_Intensity      2181\n",
+       "Developed__High_Intensity        2181\n",
+       "Barren_Land                      2181\n",
+       "Deciduous_Forest                 2181\n",
+       "Evergreen_Forest                 2181\n",
+       "Mixed_Forest                     2181\n",
+       "Shrub_Scrub                      2181\n",
+       "Herbaceuous                      2181\n",
+       "Hay_Pasture                      2181\n",
+       "Cultivated_Crops                 2181\n",
+       "Woody_Wetlands                   2181\n",
+       "Emergent_Herbaceuous_Wetlands    2181\n",
+       "Population                       2028\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 2181 entries, 0 to 2180\n",
+      "Data columns (total 35 columns):\n",
+      " #   Column                         Non-Null Count  Dtype  \n",
+      "---  ------                         --------------  -----  \n",
+      " 0   FIPS                           2181 non-null   int64  \n",
+      " 1   MaxPrecipitation               2181 non-null   object \n",
+      " 2   WindSwathRadii                 2181 non-null   int64  \n",
+      " 3   CountyOverlap                  2181 non-null   float64\n",
+      " 4   VALUE_1                        434 non-null    float64\n",
+      " 5   VALUE_2                        434 non-null    float64\n",
+      " 6   VALUE_3                        434 non-null    float64\n",
+      " 7   VALUE_4                        434 non-null    float64\n",
+      " 8   VALUE_5                        434 non-null    float64\n",
+      " 9   VALUE_7                        183 non-null    float64\n",
+      " 10  Stormsurge_Area                434 non-null    float64\n",
+      " 11  SOCIAL                         2181 non-null   float64\n",
+      " 12  INFRASTRUCTURE                 2181 non-null   float64\n",
+      " 13  COMCAPITAL                     2181 non-null   float64\n",
+      " 14  INSTITUTION                    2181 non-null   float64\n",
+      " 15  ENVIRONMENT                    2181 non-null   float64\n",
+      " 16  BRIC_SCORE                     2181 non-null   float64\n",
+      " 17  Unclassified                   2181 non-null   int64  \n",
+      " 18  Open_Water                     2181 non-null   int64  \n",
+      " 19  Perennial_Snow_Ice             2181 non-null   int64  \n",
+      " 20  Developed__Open_Space          2181 non-null   int64  \n",
+      " 21  Developed__Low_Intensity       2181 non-null   int64  \n",
+      " 22  Developed__Medium_Intensity    2181 non-null   int64  \n",
+      " 23  Developed__High_Intensity      2181 non-null   int64  \n",
+      " 24  Barren_Land                    2181 non-null   int64  \n",
+      " 25  Deciduous_Forest               2181 non-null   int64  \n",
+      " 26  Evergreen_Forest               2181 non-null   int64  \n",
+      " 27  Mixed_Forest                   2181 non-null   int64  \n",
+      " 28  Shrub_Scrub                    2181 non-null   int64  \n",
+      " 29  Herbaceuous                    2181 non-null   int64  \n",
+      " 30  Hay_Pasture                    2181 non-null   int64  \n",
+      " 31  Cultivated_Crops               2181 non-null   int64  \n",
+      " 32  Woody_Wetlands                 2181 non-null   int64  \n",
+      " 33  Emergent_Herbaceuous_Wetlands  2181 non-null   int64  \n",
+      " 34  Population                     2028 non-null   float64\n",
+      "dtypes: float64(15), int64(19), object(1)\n",
+      "memory usage: 596.5+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "x.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 2181 entries, 0 to 2180\n",
+      "Data columns (total 35 columns):\n",
+      " #   Column                         Non-Null Count  Dtype \n",
+      "---  ------                         --------------  ----- \n",
+      " 0   FIPS                           2181 non-null   object\n",
+      " 1   MaxPrecipitation               2181 non-null   object\n",
+      " 2   WindSwathRadii                 2181 non-null   object\n",
+      " 3   CountyOverlap                  2181 non-null   object\n",
+      " 4   VALUE_1                        434 non-null    object\n",
+      " 5   VALUE_2                        434 non-null    object\n",
+      " 6   VALUE_3                        434 non-null    object\n",
+      " 7   VALUE_4                        434 non-null    object\n",
+      " 8   VALUE_5                        434 non-null    object\n",
+      " 9   VALUE_7                        183 non-null    object\n",
+      " 10  Stormsurge_Area                434 non-null    object\n",
+      " 11  SOCIAL                         2181 non-null   object\n",
+      " 12  INFRASTRUCTURE                 2181 non-null   object\n",
+      " 13  COMCAPITAL                     2181 non-null   object\n",
+      " 14  INSTITUTION                    2181 non-null   object\n",
+      " 15  ENVIRONMENT                    2181 non-null   object\n",
+      " 16  BRIC_SCORE                     2181 non-null   object\n",
+      " 17  Unclassified                   2181 non-null   object\n",
+      " 18  Open_Water                     2181 non-null   object\n",
+      " 19  Perennial_Snow_Ice             2181 non-null   object\n",
+      " 20  Developed__Open_Space          2181 non-null   object\n",
+      " 21  Developed__Low_Intensity       2181 non-null   object\n",
+      " 22  Developed__Medium_Intensity    2181 non-null   object\n",
+      " 23  Developed__High_Intensity      2181 non-null   object\n",
+      " 24  Barren_Land                    2181 non-null   object\n",
+      " 25  Deciduous_Forest               2181 non-null   object\n",
+      " 26  Evergreen_Forest               2181 non-null   object\n",
+      " 27  Mixed_Forest                   2181 non-null   object\n",
+      " 28  Shrub_Scrub                    2181 non-null   object\n",
+      " 29  Herbaceuous                    2181 non-null   object\n",
+      " 30  Hay_Pasture                    2181 non-null   object\n",
+      " 31  Cultivated_Crops               2181 non-null   object\n",
+      " 32  Woody_Wetlands                 2181 non-null   object\n",
+      " 33  Emergent_Herbaceuous_Wetlands  2181 non-null   object\n",
+      " 34  Population                     2028 non-null   object\n",
+      "dtypes: object(35)\n",
+      "memory usage: 596.5+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "x['FIPS'] = x['FIPS'].astype('object')\n",
+    "x['MaxPrecipitation'] = x['MaxPrecipitation'].astype('object')\n",
+    "x['WindSwathRadii'] = x['WindSwathRadii'].astype('object')\n",
+    "x\n",
+    "x.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-76-ec7a9b2fc77b>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-76-ec7a9b2fc77b>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    x.iloc[:, ['CountyOverlap':'Population']]\u001b[0m\n\u001b[0m                              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "x.iloc[:, ['CountyOverlap':'Population']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       22001\n",
+       "1       22009\n",
+       "2       22011\n",
+       "3       22013\n",
+       "4       22015\n",
+       "        ...  \n",
+       "2176    12003\n",
+       "2177    12073\n",
+       "2178    12053\n",
+       "2179    12067\n",
+       "2180    12023\n",
+       "Name: FIPS, Length: 2181, dtype: object"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
