added source dataset

--- a/research/rhrms_data_analysis.ipynb
+++ b/research/rhrms_data_analysis.ipynb
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -431,43 +431,368 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>id</th>\n",
-       "      <th>fips</th>\n",
-       "      <th>serialnumber</th>\n",
-       "      <th>hurricanename</th>\n",
-       "      <th>declarationdate</th>\n",
-       "      <th>incidentbegindate</th>\n",
-       "      <th>incidentenddate</th>\n",
-       "      <th>disastercloseoutdate</th>\n",
-       "      <th>declared</th>\n",
-       "      <th>maxprecipitation</th>\n",
+       "      <th>FIPS</th>\n",
+       "      <th>SerialNumber</th>\n",
+       "      <th>HurricaneName</th>\n",
+       "      <th>DeclarationDate</th>\n",
+       "      <th>IncidentBeginDate</th>\n",
+       "      <th>IncidentEndDate</th>\n",
+       "      <th>DisasterCloseOutDate</th>\n",
+       "      <th>Declared</th>\n",
+       "      <th>MaxPrecipitation</th>\n",
        "      <th>...</th>\n",
-       "      <th>shrub_scrub</th>\n",
-       "      <th>herbaceous</th>\n",
-       "      <th>hay_pasture</th>\n",
-       "      <th>cultivated_crops</th>\n",
-       "      <th>woody_wetlands</th>\n",
-       "      <th>emergent_herbaceuous_wetlands</th>\n",
-       "      <th>geoname</th>\n",
-       "      <th>population</th>\n",
-       "      <th>county</th>\n",
-       "      <th>state</th>\n",
+       "      <th>Shrub_Scrub</th>\n",
+       "      <th>Herbaceuous</th>\n",
+       "      <th>Hay_Pasture</th>\n",
+       "      <th>Cultivated_Crops</th>\n",
+       "      <th>Woody_Wetlands</th>\n",
+       "      <th>Emergent_Herbaceuous_Wetlands</th>\n",
+       "      <th>GeoName</th>\n",
+       "      <th>Population</th>\n",
+       "      <th>County</th>\n",
+       "      <th>State</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>22001</td>\n",
+       "      <td>2019188N35274</td>\n",
+       "      <td>BARRY</td>\n",
+       "      <td>2019-08-27T11:37:00Z</td>\n",
+       "      <td>7/10/2019</td>\n",
+       "      <td>2019-07-15T20:00:00Z</td>\n",
+       "      <td>None</td>\n",
+       "      <td>No</td>\n",
+       "      <td>4\" to 6\"</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2769300</td>\n",
+       "      <td>2081700</td>\n",
+       "      <td>114534900</td>\n",
+       "      <td>1062193500</td>\n",
+       "      <td>248421600</td>\n",
+       "      <td>2347200</td>\n",
+       "      <td>Acadia, LA</td>\n",
+       "      <td>62590.0</td>\n",
+       "      <td>Acadia</td>\n",
+       "      <td>LA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>22009</td>\n",
+       "      <td>2019188N35274</td>\n",
+       "      <td>BARRY</td>\n",
+       "      <td>2019-08-27T11:37:00Z</td>\n",
+       "      <td>7/10/2019</td>\n",
+       "      <td>2019-07-15T20:00:00Z</td>\n",
+       "      <td>None</td>\n",
+       "      <td>No</td>\n",
+       "      <td>2\" to 4\"</td>\n",
+       "      <td>...</td>\n",
+       "      <td>12894300</td>\n",
+       "      <td>12469500</td>\n",
+       "      <td>254997900</td>\n",
+       "      <td>830644200</td>\n",
+       "      <td>758770200</td>\n",
+       "      <td>16775100</td>\n",
+       "      <td>Avoyelles, LA</td>\n",
+       "      <td>40980.0</td>\n",
+       "      <td>Avoyelles</td>\n",
+       "      <td>LA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>22011</td>\n",
+       "      <td>2019188N35274</td>\n",
+       "      <td>BARRY</td>\n",
+       "      <td>2019-08-27T11:37:00Z</td>\n",
+       "      <td>7/10/2019</td>\n",
+       "      <td>2019-07-15T20:00:00Z</td>\n",
+       "      <td>None</td>\n",
+       "      <td>No</td>\n",
+       "      <td>1\" to 2\"</td>\n",
+       "      <td>...</td>\n",
+       "      <td>338255100</td>\n",
+       "      <td>136060200</td>\n",
+       "      <td>226836900</td>\n",
+       "      <td>31453200</td>\n",
+       "      <td>535906800</td>\n",
+       "      <td>5139000</td>\n",
+       "      <td>Beauregard, LA</td>\n",
+       "      <td>36928.0</td>\n",
+       "      <td>Beauregard</td>\n",
+       "      <td>LA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>22013</td>\n",
+       "      <td>2019188N35274</td>\n",
+       "      <td>BARRY</td>\n",
+       "      <td>2019-08-27T11:37:00Z</td>\n",
+       "      <td>7/10/2019</td>\n",
+       "      <td>2019-07-15T20:00:00Z</td>\n",
+       "      <td>None</td>\n",
+       "      <td>No</td>\n",
+       "      <td>1\" to 2\"</td>\n",
+       "      <td>...</td>\n",
+       "      <td>237616200</td>\n",
+       "      <td>147206700</td>\n",
+       "      <td>22209300</td>\n",
+       "      <td>2137500</td>\n",
+       "      <td>366525000</td>\n",
+       "      <td>2635200</td>\n",
+       "      <td>Bienville, LA</td>\n",
+       "      <td>13638.0</td>\n",
+       "      <td>Bienville</td>\n",
+       "      <td>LA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>22015</td>\n",
+       "      <td>2019188N35274</td>\n",
+       "      <td>BARRY</td>\n",
+       "      <td>2019-08-27T11:37:00Z</td>\n",
+       "      <td>7/10/2019</td>\n",
+       "      <td>2019-07-15T20:00:00Z</td>\n",
+       "      <td>None</td>\n",
+       "      <td>No</td>\n",
+       "      <td>0\" to 1\"</td>\n",
+       "      <td>...</td>\n",
+       "      <td>95726700</td>\n",
+       "      <td>58199400</td>\n",
+       "      <td>273266100</td>\n",
+       "      <td>48853800</td>\n",
+       "      <td>433539900</td>\n",
+       "      <td>12926700</td>\n",
+       "      <td>Bossier, LA</td>\n",
+       "      <td>127634.0</td>\n",
+       "      <td>Bossier</td>\n",
+       "      <td>LA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2176</th>\n",
+       "      <td>2176</td>\n",
+       "      <td>12003</td>\n",
+       "      <td>2016242N24279</td>\n",
+       "      <td>HERMINE</td>\n",
+       "      <td>2016-09-28T12:18:00Z</td>\n",
+       "      <td>8/31/2016</td>\n",
+       "      <td>2016-09-11T23:59:00Z</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>6\" to 10\"</td>\n",
+       "      <td>...</td>\n",
+       "      <td>91291500</td>\n",
+       "      <td>85883400</td>\n",
+       "      <td>66716100</td>\n",
+       "      <td>707400</td>\n",
+       "      <td>483461100</td>\n",
+       "      <td>4784400</td>\n",
+       "      <td>Baker, FL</td>\n",
+       "      <td>28283.0</td>\n",
+       "      <td>Baker</td>\n",
+       "      <td>FL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2177</th>\n",
+       "      <td>2177</td>\n",
+       "      <td>12073</td>\n",
+       "      <td>2016242N24279</td>\n",
+       "      <td>HERMINE</td>\n",
+       "      <td>2016-09-28T12:18:00Z</td>\n",
+       "      <td>8/31/2016</td>\n",
+       "      <td>2016-09-11T23:59:00Z</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>6\" to 10\"</td>\n",
+       "      <td>...</td>\n",
+       "      <td>69276600</td>\n",
+       "      <td>71114400</td>\n",
+       "      <td>39165300</td>\n",
+       "      <td>18218700</td>\n",
+       "      <td>364411800</td>\n",
+       "      <td>39386700</td>\n",
+       "      <td>Leon, FL</td>\n",
+       "      <td>290292.0</td>\n",
+       "      <td>Leon</td>\n",
+       "      <td>FL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2178</th>\n",
+       "      <td>2178</td>\n",
+       "      <td>12053</td>\n",
+       "      <td>2016242N24279</td>\n",
+       "      <td>HERMINE</td>\n",
+       "      <td>2016-09-28T12:18:00Z</td>\n",
+       "      <td>8/31/2016</td>\n",
+       "      <td>2016-09-11T23:59:00Z</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>6\" to 10\"</td>\n",
+       "      <td>...</td>\n",
+       "      <td>18710100</td>\n",
+       "      <td>14837400</td>\n",
+       "      <td>150645600</td>\n",
+       "      <td>4752000</td>\n",
+       "      <td>211154400</td>\n",
+       "      <td>56285100</td>\n",
+       "      <td>Hernando, FL</td>\n",
+       "      <td>186553.0</td>\n",
+       "      <td>Hernando</td>\n",
+       "      <td>FL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2179</th>\n",
+       "      <td>2179</td>\n",
+       "      <td>12067</td>\n",
+       "      <td>2016242N24279</td>\n",
+       "      <td>HERMINE</td>\n",
+       "      <td>2016-09-28T12:18:00Z</td>\n",
+       "      <td>8/31/2016</td>\n",
+       "      <td>2016-09-11T23:59:00Z</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>4\" to 6\"</td>\n",
+       "      <td>...</td>\n",
+       "      <td>86326200</td>\n",
+       "      <td>92493900</td>\n",
+       "      <td>86374800</td>\n",
+       "      <td>40143600</td>\n",
+       "      <td>579096900</td>\n",
+       "      <td>23068800</td>\n",
+       "      <td>Lafayette, FL</td>\n",
+       "      <td>8451.0</td>\n",
+       "      <td>Lafayette</td>\n",
+       "      <td>FL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2180</th>\n",
+       "      <td>2180</td>\n",
+       "      <td>12023</td>\n",
+       "      <td>2016242N24279</td>\n",
+       "      <td>HERMINE</td>\n",
+       "      <td>2016-09-28T12:18:00Z</td>\n",
+       "      <td>8/31/2016</td>\n",
+       "      <td>2016-09-11T23:59:00Z</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>4\" to 6\"</td>\n",
+       "      <td>...</td>\n",
+       "      <td>136196100</td>\n",
+       "      <td>99252000</td>\n",
+       "      <td>270693900</td>\n",
+       "      <td>55429200</td>\n",
+       "      <td>443043900</td>\n",
+       "      <td>5526000</td>\n",
+       "      <td>Columbia, FL</td>\n",
+       "      <td>69612.0</td>\n",
+       "      <td>Columbia</td>\n",
+       "      <td>FL</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>0 rows × 46 columns</p>\n",
+       "<p>2181 rows × 46 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [id, fips, serialnumber, hurricanename, declarationdate, incidentbegindate, incidentenddate, disastercloseoutdate, declared, maxprecipitation, windswathradii, countyoverlap, value_1, value_2, value_3, value_4, value_5, value_7, stormsurge_area, social, infrastructure, comcapital, institution, environment, bric_score, unclassified, open_water, perennial_snow_ice, developed__open_space, developed__low_intensity, developed__medium_intensity, developed__high_intensity, barren_land, deciduous_forest, evergreen_forest, mixed_forest, shrub_scrub, herbaceous, hay_pasture, cultivated_crops, woody_wetlands, emergent_herbaceuous_wetlands, geoname, population, county, state]\n",
-       "Index: []\n",
+       "        id   FIPS   SerialNumber HurricaneName       DeclarationDate  \\\n",
+       "0        0  22001  2019188N35274         BARRY  2019-08-27T11:37:00Z   \n",
+       "1        1  22009  2019188N35274         BARRY  2019-08-27T11:37:00Z   \n",
+       "2        2  22011  2019188N35274         BARRY  2019-08-27T11:37:00Z   \n",
+       "3        3  22013  2019188N35274         BARRY  2019-08-27T11:37:00Z   \n",
+       "4        4  22015  2019188N35274         BARRY  2019-08-27T11:37:00Z   \n",
+       "...    ...    ...            ...           ...                   ...   \n",
+       "2176  2176  12003  2016242N24279       HERMINE  2016-09-28T12:18:00Z   \n",
+       "2177  2177  12073  2016242N24279       HERMINE  2016-09-28T12:18:00Z   \n",
+       "2178  2178  12053  2016242N24279       HERMINE  2016-09-28T12:18:00Z   \n",
+       "2179  2179  12067  2016242N24279       HERMINE  2016-09-28T12:18:00Z   \n",
+       "2180  2180  12023  2016242N24279       HERMINE  2016-09-28T12:18:00Z   \n",
        "\n",
-       "[0 rows x 46 columns]"
+       "     IncidentBeginDate       IncidentEndDate DisasterCloseOutDate Declared  \\\n",
+       "0            7/10/2019  2019-07-15T20:00:00Z                 None       No   \n",
+       "1            7/10/2019  2019-07-15T20:00:00Z                 None       No   \n",
+       "2            7/10/2019  2019-07-15T20:00:00Z                 None       No   \n",
+       "3            7/10/2019  2019-07-15T20:00:00Z                 None       No   \n",
+       "4            7/10/2019  2019-07-15T20:00:00Z                 None       No   \n",
+       "...                ...                   ...                  ...      ...   \n",
+       "2176         8/31/2016  2016-09-11T23:59:00Z                 None      Yes   \n",
+       "2177         8/31/2016  2016-09-11T23:59:00Z                 None      Yes   \n",
+       "2178         8/31/2016  2016-09-11T23:59:00Z                 None      Yes   \n",
+       "2179         8/31/2016  2016-09-11T23:59:00Z                 None      Yes   \n",
+       "2180         8/31/2016  2016-09-11T23:59:00Z                 None      Yes   \n",
+       "\n",
+       "     MaxPrecipitation  ...  Shrub_Scrub  Herbaceuous  Hay_Pasture  \\\n",
+       "0            4\" to 6\"  ...      2769300      2081700    114534900   \n",
+       "1            2\" to 4\"  ...     12894300     12469500    254997900   \n",
+       "2            1\" to 2\"  ...    338255100    136060200    226836900   \n",
+       "3            1\" to 2\"  ...    237616200    147206700     22209300   \n",
+       "4            0\" to 1\"  ...     95726700     58199400    273266100   \n",
+       "...               ...  ...          ...          ...          ...   \n",
+       "2176        6\" to 10\"  ...     91291500     85883400     66716100   \n",
+       "2177        6\" to 10\"  ...     69276600     71114400     39165300   \n",
+       "2178        6\" to 10\"  ...     18710100     14837400    150645600   \n",
+       "2179         4\" to 6\"  ...     86326200     92493900     86374800   \n",
+       "2180         4\" to 6\"  ...    136196100     99252000    270693900   \n",
+       "\n",
+       "      Cultivated_Crops  Woody_Wetlands  Emergent_Herbaceuous_Wetlands  \\\n",
+       "0           1062193500       248421600                        2347200   \n",
+       "1            830644200       758770200                       16775100   \n",
+       "2             31453200       535906800                        5139000   \n",
+       "3              2137500       366525000                        2635200   \n",
+       "4             48853800       433539900                       12926700   \n",
+       "...                ...             ...                            ...   \n",
+       "2176            707400       483461100                        4784400   \n",
+       "2177          18218700       364411800                       39386700   \n",
+       "2178           4752000       211154400                       56285100   \n",
+       "2179          40143600       579096900                       23068800   \n",
+       "2180          55429200       443043900                        5526000   \n",
+       "\n",
+       "             GeoName  Population      County  State  \n",
+       "0         Acadia, LA     62590.0      Acadia     LA  \n",
+       "1      Avoyelles, LA     40980.0   Avoyelles     LA  \n",
+       "2     Beauregard, LA     36928.0  Beauregard     LA  \n",
+       "3      Bienville, LA     13638.0   Bienville     LA  \n",
+       "4        Bossier, LA    127634.0     Bossier     LA  \n",
+       "...              ...         ...         ...    ...  \n",
+       "2176       Baker, FL     28283.0       Baker     FL  \n",
+       "2177        Leon, FL    290292.0        Leon     FL  \n",
+       "2178    Hernando, FL    186553.0    Hernando     FL  \n",
+       "2179   Lafayette, FL      8451.0   Lafayette     FL  \n",
+       "2180    Columbia, FL     69612.0    Columbia     FL  \n",
+       "\n",
+       "[2181 rows x 46 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -480,7 +805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -490,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
